--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -11,9 +11,9 @@ type Link = {
 };
 
 const links: Array<Link> = [
-  { name: "Algemeen", href: "/news/", icon: "rss" },
-  { name: "Dansen", href: "/truetech/", icon: "open-book" },
-  { name: "Overige", href: "/gamingforge", icon: "rocket" },
+  { name: "Algemeen", href: "/", icon: "rss" },
+  { name: "Dansen", href: "/dansen/", icon: "open-book" },
+  { name: "Overige", href: "/overige/", icon: "rocket" },
 ];
 
 const { pathname } = Astro.url;
