--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -11,7 +11,7 @@ type Link = {
 };
 
 const links: Array<Link> = [
-  { name: "Algemeen", href: "/", icon: "rss" },
+  { name: "Algemeen", href: "/algemeen/", icon: "rss" },
   { name: "Dansen", href: "/dansen/", icon: "open-book" },
   { name: "Overige", href: "/overige/", icon: "rocket" },
 ];
