fix and simplifyt css

--- a/src/components/CustomSidebar.astro
+++ b/src/components/CustomSidebar.astro
@@ -4,6 +4,7 @@
 import SidebarPersister from '@astrojs/starlight/components/SidebarPersister.astro';
 import SidebarSublist from '@astrojs/starlight/components/SidebarSublist.astro';
 import MobileMenuFooter from '@astrojs/starlight/components/MobileMenuFooter.astro';
+import "../styles/global.css";
 
 const { sidebar } = Astro.locals.starlightRoute;
 
