--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,6 +1,6 @@
 ---
 import { Icon } from "@astrojs/starlight/components";
-import "../tailwind.css";
+import "../styles/global.css";
 
 type IconName = "rss" | "star" | "open-book" | "rocket";
 
