fix minor header issue

--- a/src/components/CustomHeader.astro
+++ b/src/components/CustomHeader.astro
@@ -43,7 +43,7 @@ import ImageZoom from "starlight-image-zoom/components/ImageZoom.astro";
   }
 
   .title-wrapper {
-    overflow: hidden;
+    overflow: visible;
     align-items: center;
     gap: 0.75rem; /* half the previous space */
   }
