--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -2,6 +2,7 @@
 import { Icon } from "@astrojs/starlight/components";
 import "../styles/global.css";
 
+
 type IconName = "rss" | "star" | "open-book" | "rocket" | "information" | "add-document" | "external";
 
 type Link = {
@@ -55,8 +56,8 @@ const { pathname } = Astro.url;
   <div class="h-6 w-px mx-2" style={`background-color: var(--sl-color-accent, #c64533)`} aria-hidden="true"></div>
   <a
     href="https://balfolk.nl"
-    class="ml-2 inline-flex items-center px-3 py-1 rounded text-white font-bold transition-all hover:opacity-90"
-    style={`background-color: var(--sl-color-accent, #c64533); gap: 0.2rem; padding-right: 0.5rem;`}
+    class="ml-2 inline-flex items-center gap-1 px-2 py-0.5 rounded text-base text-white font-bold text-lg max-lg:text-xs max-md:text-xs transition-all hover:opacity-90 hover:scale-110 hover:border-b-2 focus:scale-110 focus:border-b-2 border-tc-primary relative z-10"
+    style={`background-color: var(--sl-color-accent, #c64533); gap: 0.2rem; padding-right: 0.5rem; border-bottom-color: var(--sl-color-accent, #c64533);`}
     target="_blank"
     rel="noopener noreferrer"
   >
